--- a/index.html
+++ b/index.html
@@ -1,888 +1,10 @@
-<html amp lang="en">
-
+<!DOCTYPE html>
+<html lang="zxx">
 
 <head>
-    <meta charset="utf-8">
-        <script async src="https://cdn.ampproject.org/v0.js"></script>
-        <title>Hello, AMPs</title>
-        <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-        <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-        <style amp-custom>
-            
-html,
-body {
-	height: 100%;
-	font-family: "Mulish", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	background: #0b0c2a;
-}
-
-h2,
-h4,
-h5 {
-	margin: 0;
-	color: #111111;
-	font-weight: 400;
-	font-family: "Mulish", sans-serif;
-}
-
-h2 {
-	font-size: 36px;
-}
-
-h4 {
-	font-size: 24px;
-}
-
-h5 {
-	font-size: 18px;
-}
-
-p {
-	font-size: 15px;
-	font-family: "Mulish", sans-serif;
-	color: #3d3d3d;
-	font-weight: 400;
-	line-height: 25px;
-	margin: 0 0 15px 0;
-}
-
-img {
-	max-width: 100%;
-}
-
-input:focus {
-	outline: none;
-}
-
-a:hover,
-a:focus {
-	text-decoration: none;
-	outline: none;
-	color: #ffffff;
-}
-
-ul {
-	padding: 0;
-	margin: 0;
-}
-
-/*---------------------
-  Helper CSS
------------------------*/
-
-.section-title {
-	margin-bottom: 30px;
-}
-
-.section-title h4,
-.section-title h5 {
-	color: #ffffff;
-	font-weight: 600;
-	line-height: 21px;
-	text-transform: uppercase;
-	padding-left: 20px;
-	position: relative;
-	font-family: "Oswald", sans-serif;
-}
-
-.section-title h4:after,
-.section-title h5:after {
-	position: absolute;
-	left: 0;
-	top: -6px;
-	height: 32px;
-	width: 4px;
-	background: #e53637;
-	content: "";
-}
-
-.set-bg {
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: top center;
-}
-
-.spad {
-	padding-top: 100px;
-	padding-bottom: 100px;
-}
-
-/* buttons */
-
-.primary-btn {
-	display: inline-block;
-	font-size: 13px;
-	font-weight: 700;
-	text-transform: uppercase;
-	color: #ffffff;
-	letter-spacing: 2px;
-}
-
-.primary-btn span {
-	font-size: 18px;
-	margin-left: 5px;
-	position: relative;
-	top: 3px;
-}
-
-/* Preloder */
-
-#preloder {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	z-index: 999999;
-	background: #000;
-}
-
-.loader {
-	width: 40px;
-	height: 40px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-top: -13px;
-	margin-left: -13px;
-	border-radius: 60px;
-	animation: loader 0.8s linear infinite;
-	-webkit-animation: loader 0.8s linear infinite;
-}
-
-@keyframes loader {
-	0% {
-		-webkit-transform: rotate(0deg);
-		transform: rotate(0deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-	50% {
-		-webkit-transform: rotate(180deg);
-		transform: rotate(180deg);
-		border: 4px solid #673ab7;
-		border-left-color: transparent;
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		transform: rotate(360deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-}
-
-@-webkit-keyframes loader {
-	0% {
-		-webkit-transform: rotate(0deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-	50% {
-		-webkit-transform: rotate(180deg);
-		border: 4px solid #673ab7;
-		border-left-color: transparent;
-	}
-	100% {
-		-webkit-transform: rotate(360deg);
-		border: 4px solid #f44336;
-		border-left-color: transparent;
-	}
-}
-
-.search-model {
-	display: none;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	left: 0;
-	top: 0;
-	background: #000;
-	z-index: 99999;
-}
-
-.search-model-form {
-	padding: 0 15px;
-}
-
-.search-model-form input {
-	width: 500px;
-	font-size: 40px;
-	border: none;
-	border-bottom: 2px solid #333;
-	background: 0 0;
-	color: #999;
-}
-
-.search-close-switch {
-	position: absolute;
-	width: 50px;
-	height: 50px;
-	background: #333;
-	color: #fff;
-	text-align: center;
-	border-radius: 50%;
-	font-size: 28px;
-	line-height: 28px;
-	top: 30px;
-	cursor: pointer;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-}
-
-/*---------------------
-  Header
------------------------*/
-
-.header {
-	background: #070720;
-}
-
-.header__logo {
-	padding: 20px 0 17px;
-}
-
-.header__logo a {
-	display: inline-block;
-}
-
-.header__menu {
-	text-align: center;
-}
-
-.header__menu ul li {
-	list-style: none;
-	display: inline-block;
-	position: relative;
-	margin-right: 16px;
-}
-
-.header__menu ul li.active a {
-	background: #e53637;
-	color: #ffffff;
-}
-
-.header__menu ul li:hover a {
-	color: #ffffff;
-}
-
-.header__menu ul li:hover .dropdown {
-	top: 62px;
-	opacity: 1;
-	visibility: visible;
-}
-
-.header__menu ul li:hover .dropdown li a {
-	background: transparent;
-}
-
-.header__menu ul li:last-child {
-	margin-right: 0;
-}
-
-.header__menu ul li .dropdown {
-	position: absolute;
-	left: 0;
-	top: 82px;
-	width: 150px;
-	background: #ffffff;
-	text-align: left;
-	padding: 5px 0;
-	z-index: 9;
-	opacity: 0;
-	visibility: hidden;
-	-webkit-transition: all, 0.3s;
-	-o-transition: all, 0.3s;
-	transition: all, 0.3s;
-}
-
-.header__menu ul li .dropdown li {
-	display: block;
-	margin-right: 0;
-}
-
-.header__menu ul li .dropdown li a {
-	font-size: 14px;
-	color: #111111;
-	font-weight: 500;
-	padding: 5px 20px;
-}
-
-.header__menu ul li a {
-	font-size: 15px;
-	color: #b7b7b7;
-	display: block;
-	font-weight: 700;
-	-webkit-transition: all, 0.5s;
-	-o-transition: all, 0.5s;
-	transition: all, 0.5s;
-	padding: 20px;
-}
-
-.header__menu ul li a span {
-	position: relative;
-	font-size: 17px;
-	top: 2px;
-}
-
-.header__right {
-	text-align: right;
-	padding: 20px 0 15px;
-}
-
-.header__right a {
-	display: inline-block;
-	font-size: 18px;
-	color: #ffffff;
-	margin-right: 30px;
-}
-
-.header__right a:last-child {
-	margin-right: 0;
-}
-
-/*---------------------
-  Hero
------------------------*/
-
-.hero {
-	padding-top: 50px;
-}
-
-.hero__items {
-	padding: 250px 0 42px 50px;
-	border-radius: 5px;
-}
-
-.hero__text {
-	position: relative;
-	z-index: 9;
-}
-
-.hero__text .label {
-	font-size: 13px;
-	color: #e53637;
-	background: #ffffff;
-	padding: 5px 14px 3px;
-	display: inline-block;
-	position: relative;
-	top: -100px;
-	opacity: 0;
-	-webkit-transition: all, 0.2s;
-	-o-transition: all, 0.2s;
-	transition: all, 0.2s;
-}
-
-.hero__text h2 {
-	color: #ffffff;
-	font-size: 42px;
-	font-family: "Oswald", sans-serif;
-	font-weight: 700;
-	line-height: 52px;
-	margin-top: 35px;
-	margin-bottom: 8px;
-	position: relative;
-	top: -100px;
-	opacity: 0;
-	-webkit-transition: all, 0.4s;
-	-o-transition: all, 0.4s;
-	transition: all, 0.4s;
-}
-
-.hero__text p {
-	color: #ffffff;
-	font-size: 16px;
-	margin-bottom: 40px;
-	position: relative;
-	top: -100px;
-	opacity: 0;
-	-webkit-transition: all, 0.6s;
-	-o-transition: all, 0.6s;
-	transition: all, 0.6s;
-}
-
-.hero__text a {
-	position: relative;
-	top: -100px;
-	opacity: 0;
-	-webkit-transition: all, 0.8s;
-	-o-transition: all, 0.8s;
-	transition: all, 0.8s;
-}
-
-.hero__text a span {
-	font-size: 13px;
-	color: #ffffff;
-	background: #e53637;
-	display: inline-block;
-	font-weight: 700;
-	letter-spacing: 2px;
-	text-transform: uppercase;
-	padding: 14px 20px;
-	border-radius: 4px 0 0 4px;
-	margin-right: 1px;
-}
-
-.hero__text a i {
-	font-size: 20px;
-	display: inline-block;
-	background: #e53637;
-	padding: 11px 5px 16px 8px;
-	color: #ffffff;
-	border-radius: 0 4px 4px 0;
-}
-
-/*---------------------
-  Product
------------------------*/
-
-.product {
-	padding-bottom: 60px;
-	padding-top: 80px;
-}
-
-.btn__all {
-	text-align: right;
-	margin-bottom: 30px;
-}
-
-.trending__product {
-	margin-bottom: 50px;
-}
-
-.popular__product {
-	margin-bottom: 50px;
-}
-
-.recent__product {
-	margin-bottom: 50px;
-}
-
-.product__item {
-	margin-bottom: 30px;
-}
-
-.product__item__pic {
-	height: 325px;
-	position: relative;
-	border-radius: 5px;
-}
-
-.product__item__pic .ep {
-	font-size: 13px;
-	color: #ffffff;
-	background: #e53637;
-	display: inline-block;
-	padding: 2px 12px;
-	border-radius: 4px;
-	position: absolute;
-	left: 10px;
-	top: 10px;
-}
-
-.product__item__pic .comment {
-	font-size: 13px;
-	color: #ffffff;
-	background: #3d3d3d;
-	display: inline-block;
-	padding: 2px 10px;
-	border-radius: 4px;
-	position: absolute;
-	left: 10px;
-	bottom: 10px;
-}
-
-.product__item__pic .view {
-	font-size: 13px;
-	color: #ffffff;
-	background: #3d3d3d;
-	display: inline-block;
-	padding: 2px 10px;
-	border-radius: 4px;
-	position: absolute;
-	right: 10px;
-	bottom: 10px;
-}
-
-.product__item__text {
-	padding-top: 20px;
-}
-
-.product__item__text ul {
-	margin-bottom: 10px;
-}
-
-.product__item__text ul li {
-	list-style: none;
-	font-size: 10px;
-	color: #ffffff;
-	font-weight: 700;
-	padding: 1px 10px;
-	background: rgba(255, 255, 255, 0.2);
-	border-radius: 50px;
-	display: inline-block;
-}
-
-.product__item__text h5 a {
-	color: #ffffff;
-	font-weight: 700;
-	line-height: 26px;
-}
-
-.product__sidebar .section-title h5 {
-	color: #ffffff;
-	font-weight: 600;
-	font-family: "Oswald", sans-serif;
-	line-height: 21px;
-	text-transform: uppercase;
-	padding-left: 20px;
-	position: relative;
-}
-
-.product__sidebar .section-title h5:after {
-	position: absolute;
-	left: 0;
-	top: -6px;
-	height: 32px;
-	width: 4px;
-	background: #e53637;
-	content: "";
-}
-
-.product__sidebar__view {
-	position: relative;
-	margin-bottom: 80px;
-}
-
-.product__sidebar__view .filter__controls {
-	position: absolute;
-	right: 0;
-	top: -5px;
-}
-
-.product__sidebar__view .filter__controls li {
-	list-style: none;
-	font-size: 13px;
-	color: #b7b7b7;
-	display: inline-block;
-	margin-right: 7px;
-	cursor: pointer;
-}
-
-.product__sidebar__view .filter__controls li.active {
-	color: #ffffff;
-}
-
-.product__sidebar__view .filter__controls li:last-child {
-	margin-right: 0;
-}
-
-.product__sidebar__view__item {
-	height: 190px;
-	position: relative;
-	border-radius: 5px;
-	margin-bottom: 20px;
-}
-
-.product__sidebar__view__item .ep {
-	font-size: 13px;
-	color: #ffffff;
-	background: #e53637;
-	display: inline-block;
-	padding: 2px 12px;
-	border-radius: 4px;
-	position: absolute;
-	left: 10px;
-	top: 10px;
-}
-
-.product__sidebar__view__item .view {
-	font-size: 13px;
-	color: #ffffff;
-	background: #3d3d3d;
-	display: inline-block;
-	padding: 2px 10px;
-	border-radius: 4px;
-	position: absolute;
-	right: 10px;
-	top: 10px;
-}
-
-.product__sidebar__view__item h5 {
-	position: absolute;
-	left: 0;
-	bottom: 25px;
-	width: 100%;
-	padding: 0 30px 0 20px;
-}
-
-.product__sidebar__view__item h5 a {
-	color: #ffffff;
-	font-weight: 700;
-	line-height: 26px;
-}
-
-.product__sidebar__comment {
-	margin-bottom: 35px;
-}
-
-.product__sidebar__comment__item {
-	margin-bottom: 20px;
-	overflow: hidden;
-}
-
-.product__sidebar__comment__item__pic {
-	float: left;
-	margin-right: 15px;
-}
-
-.product__sidebar__comment__item__text {
-	overflow: hidden;
-}
-
-.product__sidebar__comment__item__text ul {
-	margin-bottom: 10px;
-}
-
-.product__sidebar__comment__item__text ul li {
-	list-style: none;
-	font-size: 10px;
-	color: #ffffff;
-	font-weight: 700;
-	padding: 1px 10px;
-	background: rgba(255, 255, 255, 0.2);
-	border-radius: 50px;
-	display: inline-block;
-}
-
-.product__sidebar__comment__item__text h5 {
-	margin-bottom: 10px;
-}
-
-.product__sidebar__comment__item__text h5 a {
-	color: #ffffff;
-	font-weight: 700;
-	line-height: 26px;
-}
-
-.product__sidebar__comment__item__text span {
-	display: block;
-	font-size: 13px;
-	color: #b7b7b7;
-}
-
-/*---------------------
-  Anime Details
------------------------*/
-
-/*---------------------
-  Anime Watching
------------------------*/
-
-/*---------------------
-  Breadcrumb
------------------------*/
-
-/*---------------------
-    Normal Breadcrumb
------------------------*/
-
-/*---------------------
-    Blog
------------------------*/
-
-/*---------------------
-  Blog Details
------------------------*/
-
-/*---------------------
-  Login
------------------------*/
-
-/*---------------------
-  Sign Up
------------------------*/
-
-/*---------------------
-  Footer
------------------------*/
-
-.footer {
-	background: #070720;
-	padding-top: 60px;
-	padding-bottom: 40px;
-	position: relative;
-}
-
-.page-up {
-	position: absolute;
-	left: 50%;
-	top: -25px;
-	margin-left: -25px;
-}
-
-.page-up a {
-	display: inline-block;
-	font-size: 36px;
-	color: #ffffff;
-	height: 50px;
-	width: 50px;
-	background: #e53637;
-	line-height: 50px;
-	text-align: center;
-	border-radius: 50%;
-}
-
-.page-up a span {
-	position: relative;
-	top: 2px;
-	left: -1px;
-}
-
-.footer__nav {
-	text-align: center;
-}
-
-.footer__nav ul li {
-	list-style: none;
-	display: inline-block;
-	position: relative;
-	margin-right: 40px;
-}
-
-.footer__nav ul li:last-child {
-	margin-right: 0;
-}
-
-.footer__nav ul li a {
-	font-size: 15px;
-	color: #b7b7b7;
-	display: block;
-	font-weight: 700;
-}
-
-/*--------------------------------- Responsive Media Quaries -----------------------------*/
-
-@media only screen and (min-width: 1200px) and (max-width: 1300px) {
-	.hero {
-		overflow: hidden;
-	}
-}
-
-@media only screen and (min-width: 1200px) {
-	.container {
-		max-width: 1170px;
-	}
-}
-
-/* Medium Device = 1200px */
-
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-	.hero {
-		overflow: hidden;
-	}
-}
-
-/* Tablet Device = 768px */
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-	.hero {
-		overflow: hidden;
-	}
-	.header {
-		position: relative;
-	}
-	.header .container {
-		position: relative;
-	}
-	.header__right {
-		position: absolute;
-		right: 120px;
-		top: -42px;
-		padding: 0;
-	}
-	.header__menu {
-		display: none;
-	}
-	.product__sidebar {
-		padding-top: 50px;
-	}
-	.footer__logo {
-		text-align: center;
-		margin-bottom: 20px;
-	}
-	.footer__nav {
-		margin-bottom: 15px;
-	}
-}
-
-/* Wide Mobile = 480px */
-
-@media only screen and (max-width: 767px) {
-	.hero {
-		overflow: hidden;
-	}
-	.header {
-		position: relative;
-	}
-	.header .container {
-		position: relative;
-	}
-	.header__right {
-		position: absolute;
-		right: 120px;
-		top: -42px;
-		padding: 0;
-	}
-	.header__menu {
-		display: none;
-	}
-	.product__sidebar {
-		padding-top: 50px;
-	}
-	.footer__logo {
-		text-align: center;
-		margin-bottom: 20px;
-	}
-	.footer__nav {
-		margin-bottom: 15px;
-	}
-	.btn__all {
-		text-align: left;
-	}
-	.product__sidebar__view .filter__controls li {
-		margin-right: 2px;
-	}
-	.search-model-form input {
-		width: 100%;
-	}
-}
-
-/* Small Device = 320px */
-
-@media only screen and (max-width: 479px) {
-	.hero__items {
-		padding: 250px 0 42px 15px;
-	}
-	.hero__text h2 {
-		font-size: 32px;
-	}
-	.footer__nav ul li {
-		margin-right: 10px;
-	}
-	.header__right a {
-		margin-right: 10px;
-	}
-}
-        </style>
-        <meta name="keywords" content="Anime, unica, creative, html">
+    <meta charset="UTF-8">
+    <meta name="description" content="Anime Template">
+    <meta name="keywords" content="Anime, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Anime | Template</title>
@@ -893,8 +15,15 @@ ul {
     rel="stylesheet">
 
     <!-- Css Styles -->
-    <amp
-       </head>
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="css/plyr.css" type="text/css">
+    <link rel="stylesheet" href="css/nice-select.css" type="text/css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+</head>
 
 <body>
     <!-- Page Preloder -->
@@ -1578,7 +707,7 @@ ul {
             </div>
             <div class="col-lg-3">
                 <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                  Copyright &copy;</a>
+                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 
               </div>
@@ -1591,7 +720,7 @@ ul {
   <div class="search-model">
     <div class="h-100 d-flex align-items-center justify-content-center">
         <div class="search-close-switch"><i class="icon_close"></i></div>
-        <amp-form class="search-model-form">
+        <form class="search-model-form">
             <input type="text" id="search-input" placeholder="Search here.....">
         </form>
     </div>
